Upgraded to latest svelte and smui versions and fixed dark mode for switch and slider

--- a/src/theme/_smui-theme copy.scss
+++ b/src/theme/_smui-theme copy.scss
@@ -1,35 +1,17 @@
 @import "@material/theme/color-palette";
 
 :root {
-    --primary-100: #ebf8ff;
-    --primary-200: #bee3f8;
-    --primary-300: #90cdf4;
-    --primary-400: #63b3ed;
-    --primary-500: #4299e1;
-    --primary-600: #3182ce;
-    --primary-700: #2b6cb0;
-    --primary-800: #2c5282;
-    --primary-900: #2a4365;
-    --secondary-100: #fff5f5;
-    --secondary-200: #fed7d7;
-    --secondary-300: #feb2b2;
-    --secondary-400: #fc8181;
-    --secondary-500: #f56565;
-    --secondary-600: #e53e3e;
-    --secondary-700: #c53030;
-    --secondary-800: #9b2c2c;
-    --secondary-900: #742a2a;
-
-    --primary-color: var(--primary-700);
-    --secondary-color: var(--secondary-700);
-    --primary-font-color: hsl(0, 0%, 100%);
-    --secondary-font-color: hsl(0, 0%, 100%);
-    --disabled-button-bg-color: hsl(0, 0%, 87.8%);
-    --font-color: hsl(0, 0%, 12.9%);
-    --other-font-color: hsl(0, 0%, 0%);
-    --bg-color: hsl(0, 0%, 100%);
-    --enabled-color: hsl(0, 0%, 45.9%);
-    --disabled-color: hsl(0, 0%, 74.1%);
+    --primary-color: #2b6cb0; // bg-blue-700
+    --secondary-color: #c53030; // bg-red-700
+    --primary-font-color: #ffffff;
+    --secondary-font-color: #ffffff;
+    --disabled-button-bg-color: rgba(0, 0, 0, 0.12);
+    --border-color: rgba(255, 255, 255, 0.7);
+    --font-color: rgba(0, 0, 0, 0.87);
+    --other-font-color: black;
+    --bg-color: #fff;
+    --enabled-color: rgba(0, 0, 0, 0.54);
+    --disabled-color: rgba(0, 0, 0, 0.26);
     --switch-toggle-color: hsl(0, 0%, 98%);
     --switch-track-color: hsl(0, 0%, 30%);
     --font-family: "Montserrat", sans-serif;
@@ -38,16 +20,17 @@
 }
 
 [data-theme="dark"] {
-    --primary-color: var(--primary-400);
-    --secondary-color: var(--secondary-400);
-    --primary-font-color: hsl(0, 0%, 0%);
-    --secondary-font-color: hsl(0, 0%, 0%);
-    --disabled-button-bg-color: hsl(0, 0%, 12.2%);
-    --font-color: hsl(0, 0%, 87.1%);
-    --other-font-color: hsl(0, 0%, 100%);
-    --bg-color: hsl(0, 0%, 3%);
-    --enabled-color: hsl(0, 0%, 70.2%);
-    --disabled-color: hsl(0, 0%, 30.2%);
+    --primary-color: #63b3ed; // bg-blue-400
+    --secondary-color: #fc8181; // bg-red-400
+    --primary-font-color: #000000;
+    --secondary-font-color: #000000;
+    --disabled-button-bg-color: rgba(255, 255, 255, 0.12);
+    --border-color: rgba(0, 0, 0, 0.54);
+    --font-color: rgba(255, 255, 255, 0.87);
+    --other-font-color: white;
+    --bg-color: rgb(7, 7, 8);
+    --enabled-color: rgba(255, 255, 255, 0.7);
+    --disabled-color: rgba(255, 255, 255, 0.3);
     --switch-toggle-color: hsl(0, 0%, 70%);
     --switch-track-color: hsl(0, 0%, 100%);
     --filter: invert(100%);
@@ -70,12 +53,11 @@ body {
 }
 
 $mdc-typography-font-family: var(--font-family, "Montserrat", sans-serif);
+$mdc-theme-background: #fff;
+$mdc-theme-surface: #fff;
 // $mdc-button-shape-radius: 999px;
 
 $mdc-theme-error: $material-color-red-900;
-
-// Button
-$mdc-button-disabled-ink-color: var(--disabled-color);
 
 // Data Tables
 $mdc-data-table-stroke-color: var(--disabled-color);
@@ -89,12 +71,10 @@ $mdc-data-table-divider-color: var(--disabled-color);
 
 // Radio
 $mdc-radio-unchecked-color: var(--enabled-color);
-$mdc-radio-baseline-theme-color: primary !default;
 
 //Checkbox
 $mdc-checkbox-border-color: var(--enabled-color);
 $mdc-checkbox-disabled-color: var(--disabled-color);
-$mdc-checkbox-baseline-theme-color: primary !default;
 
 // Text field
 // $mdc-text-field-ink-color: $other-font-color;
@@ -139,11 +119,35 @@ $mdc-select-dropdown-opacity: 1 !default;
 
 $mdc-switch-toggled-off-thumb-color: var(--switch-toggle-color);
 $mdc-switch-toggled-off-track-color: var(--switch-track-color);
+// $mdc-switch-toggled-off-ripple-color: #9e9e9e !default;
+// $mdc-switch-disabled-thumb-color: green; //var(--border-color);
+// $mdc-switch-disabled-track-color: var(--disabled-color);
+
 $mdc-switch-baseline-theme-color: primary !default;
 
+// .mdc-button--raised:not(:disabled), .mdc-button--unelevated:not(:disabled) {
 .mdc-button--raised:disabled,
 .mdc-button--unelevated:disabled {
-    background-color: var(--disabled-button-bg-color);
+    background-color: var(--disabled-button-bg-color, #383838);
+    color: var(--disabled-color, #5c5c5c);
+}
+
+.mdc-button--outlined:disabled {
+    border-color: var(--disabled-color, #5c5c5c);
+}
+
+.mdc-button:disabled {
+    color: var(--disabled-color, #5c5c5c);
+}
+
+.smui-button--color-secondary.mdc-button--raised:not(:disabled),
+.smui-button--color-secondary.mdc-button--unelevated:not(:disabled) {
+    color: var(--primary-font-color);
+}
+
+.smui-button--color-secondary.mdc-button--raised:not(:disabled),
+.smui-button--color-secondary.mdc-button--unelevated:not(:disabled) {
+    color: var(--secondary-font-color);
 }
 
 .mdc-radio__native-control:disabled + .mdc-radio__background .mdc-radio__outer-circle,
